<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Purplelightest">

    <TextView
        android:id="@+id/length"
        android:layout_width="@dimen/_86sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_length_base"
        android:fontFamily="@font/bahnschrift1"
        android:text="@string/length"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/value"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_length_base"
        android:fontFamily="@font/bahnschrift1"
        android:gravity="center"
        android:text="@string/value"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/length"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/lengthInput"
        android:layout_width="@dimen/_83sdp"
        android:layout_height="@dimen/_40sdp"
        android:autofillHints="no"
        android:gravity="center"
        android:background="@drawable/expression_input"
        android:digits="0,1,2,3,4,5,6"
        android:fontFamily="@font/bahnschrift1"
        android:inputType="number"
        android:maxLength="1"
        android:textColorHint="@color/Purpledark"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBaseline_toBaselineOf="@+id/length"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintLeft_toRightOf="@id/length"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/valueInput"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/expression_input"
        android:ems="1"
        android:fontFamily="@font/bahnschrift1"
        android:hint="@string/input_value"
        android:inputType="number"
        android:maxLength="20"
        android:textAlignment="center"
        android:textColorHint="@color/Purpledark"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBaseline_toBaselineOf="@+id/value"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintLeft_toRightOf="@id/value"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <android.widget.Button
        android:id="@+id/pushButton"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/push_pop_button"
        android:elevation="5dp"
        android:fontFamily="@font/bahnschrift1"
        android:text="@string/push"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/value"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintLeft_toRightOf="@id/valueInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.127" />


    <TextView
        android:id="@+id/stackValue6"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/stackValue5"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/stackValue5"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/stackValue4"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/stackValue4"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/stackValue"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/stackValue"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/stackValue3"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/stackValue3"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/stackValue2"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/stackValue2"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/stackValue1"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/stackValue1"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:paddingTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677" />


    <android.widget.Button
        android:id="@+id/popButton"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_42sdp"
        android:background="@drawable/push_pop_button"
        android:elevation="5dp"
        android:fontFamily="@font/bahnschrift1"
        android:text="@string/pop"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toRightOf="@id/stackValue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <android.widget.Button
        android:id="@+id/peekButton"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_42sdp"
        android:background="@drawable/push_pop_button"
        android:elevation="5dp"
        android:fontFamily="@font/bahnschrift1"
        android:text="Peek"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/stackValue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <android.widget.Button
        android:id="@+id/setButton"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/push_pop_button"
        android:elevation="5dp"
        android:fontFamily="@font/bahnschrift1"
        android:text="@string/set"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/length"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintLeft_toRightOf="@id/lengthInput"
        app:layout_constraintRight_toRightOf="parent" />

    <android.widget.Button
        android:id="@+id/help"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:background="@drawable/ic_help"
        android:fontFamily="@font/bahnschrift1"
        app:layout_constraintBaseline_toBaselineOf="@+id/length"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintLeft_toRightOf="@id/lengthInput"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/valueBase"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_136sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/down_value" />

    <TextView
        android:id="@+id/poppedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahnschrift1"
        android:text="@string/the_value_popped_is"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/Purplelight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintLeft_toLeftOf="@id/valueBase"
        app:layout_constraintRight_toRightOf="@id/valueBase"
        app:layout_constraintTop_toTopOf="@id/valueBase"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/poppedValueFiled"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/value_field"
        android:hint="None"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/Purplelight"
        android:textColorHint="@color/Purplelight"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/poppedValue"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintLeft_toRightOf="@id/poppedValue"
        app:layout_constraintRight_toRightOf="@id/valueBase" />

    <android.widget.Button
        android:id="@+id/aboutApp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/about_app"
        android:textColor="#737373"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/valueBase"
        app:layout_constraintRight_toRightOf="@id/valueBase"
        app:layout_constraintTop_toBottomOf="@id/poppedValue"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>